--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,12 @@
             <version>1.4.2</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.vaadin</groupId>
+            <artifactId>vaadin-compatibility-server</artifactId>
+            <version>8.0.6</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 
     <build>
